# whimy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml  package.json
.cargo/: config.toml
.github/: BEFORE_RELEASE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: CI.yml  ci-dev.yml  ci-prod.yml
examples/: README.md  package-lock.json  package.json
examples/src/: system_information.mjs  verify_signature.mjs  wmi.mjs
scripts/: getVersion.ps1
src/: lib.rs  verify_signature.rs  wmi_query_handler.rs  wmi_variant.rs
src/async_wmi/: async_wmi_query_handler.rs  mod.rs
src/registries/: mod.rs
src/signatures/: mod.rs  verify_signature.rs
src/wmi/: mod.rs  wmi_query_handler.rs  wmi_variant.rs
test_node/: index.test.mjs  package-lock.json  package.json
test_signed_data/: README.md
test_signed_data/custom_signed/: Cargo.toml  check_cert.ps1  openssl.cnf  setting_up_cert_testing.ps1
test_signed_data/custom_signed/src/: main.rs
