[package]
edition = "2021"
name = "whimy"
version = "0.0.3"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.13.3", default-features = false, features = [
    "napi4",
] }
napi-derive = "2.13.0"
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_System_Rpc",
    "Win32_Security",
    "Win32_System_Variant",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Sip",
    "Win32_Security_Cryptography_Catalog",
] }

lazy_static = "1.4.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
codegen-units = 1
